--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
         {
             width: 800px;
             height: 600px;
-            //position: relative;
-            //border: 2px solid black;
         }
 
         canvas          
@@ -52,11 +50,14 @@
     <script src="src/game/scoreboard.js"        ></script> <!-- Display informational text to player -->
     <script src="src/game/tile.js"              ></script> <!-- Interface to Wall, saves resources   -->
     <script src="src/game/particle.js"          ></script> <!-- Basic particle fx class              -->
+    <script src="src/ui/ui_component.js"        ></script> <!-- Generic class for UI                 -->
+    <script src="src/ui/ui_scroll_component.js" ></script> <!-- UI Scroll component for scrolling    -->
     <script src="src/ui/ui_globals.js"          ></script> <!-- Global variable definitions for UI   -->
-    <script src="src/ui/ui_func.js"             ></script> <!-- Functions for UI                     -->
-    <script src="src/ui/menu.js"                ></script> <!-- Base class for Menus                 -->
-    <script src="src/ui/label.js"               ></script> <!-- Label class for basic UI components  -->
-    <script src="src/ui/menuitem.js"            ></script> <!-- Base class for MenuItems             -->
+    <script src="src/ui/ui_func.js"             ></script> <!-- Common functions for UI              -->
+    <script src="src/ui/ui_menu.js"             ></script> <!-- Base class for Menus                 -->
+    <script src="src/ui/ui_label.js"            ></script> <!-- Label class for basic UI components  -->
+    <script src="src/ui/ui_menuitem.js"         ></script> <!-- Base class for MenuItems             -->
+    <script src="src/ui/ui_edit_mode.js"        ></script> <!-- User interface for the level editor  -->
     <script src="src/initialize.js"             ></script> <!-- Initialization of game objects       -->
 
     <div id="stage">
