--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         }
         #stage 
         {
-            width: 800px;
+            width : 800px;
             height: 600px;
         }
 
         canvas          
         { 
-            position: absolute; 
-            display: flex;
-            margin: 0 auto;
-            border: 3px solid black;
+            position: absolute       ; 
+            display : flex           ;
+            margin  : 0 auto         ;
+            border  : 3px solid black;
         }
         #ui_canvas      { z-index: 2        ; }
         #game_canvas    { z-index: 1        ; }
@@ -58,6 +58,7 @@
     <script src="src/ui/ui_label.js"            ></script> <!-- Label class for basic UI components  -->
     <script src="src/ui/ui_menuitem.js"         ></script> <!-- Base class for MenuItems             -->
     <script src="src/ui/ui_edit_mode.js"        ></script> <!-- User interface for the level editor  -->
+    <script src="src/ui/ui_mouse_events.js"     ></script> <!-- Mouse events for UI Canvas           -->
     <script src="src/initialize.js"             ></script> <!-- Initialization of game objects       -->
 
     <div id="stage">
